hphp/hack/test/typecheck/higher_kinded_types/simple_kinds_function.php.exp
File "simple_kinds_function.php", line 11, characters 3-7:
Expected 2 type parameters (Typing[4029])
  File "simple_kinds_function.php", line 6, characters 10-14:
  Definition is here
File "simple_kinds_function.php", line 13, characters 3-7:
Expected 2 type parameters (Typing[4029])
  File "simple_kinds_function.php", line 6, characters 10-14:
  Definition is here
File "simple_kinds_function.php", line 9, characters 14-18:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "simple_kinds_function.php", line 4, characters 7-11:
  Definition is here
File "simple_kinds_function.php", line 13, characters 14-18:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "simple_kinds_function.php", line 4, characters 7-11:
  Definition is here
File "simple_kinds_function.php", line 15, characters 14-16:
This is a fully-applied type, but a type constructor expecting a single (fully-applied) type argument was expected here. (Typing[4383])
  File "simple_kinds_function.php", line 6, characters 20-21:
  We are expecting a type constructor expecting a single (fully-applied) type argument due to the definition of T2 here.
